# dict-cpp

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.bigendian  GITHUB_SETUP.md  LICENSE  PROJECT_SUMMARY.md  README.md
.github/workflows/: README.md  multi-arch-tests.yml
benchmarks/: benchmark.cpp
docs/: MULTI_ARCH_TESTING.md  QUICK_START.md
examples/: basic.cpp  parsing.cpp
include/dict/: dict.h
src/: dict.cpp
tests/: unit_tests.cpp
